<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/buttonStartTest"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/buttonStartTestImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/StartTestImage"
            android:src="@drawable/start" />

        <TextView
            android:id="@+id/buttonStartTestTest"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/buttonStartTestImage"
            android:text="@string/StartTest"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonHistory"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartTest">

        <ImageView
            android:id="@+id/buttonHistoryImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/HistoryImage"
            android:src="@drawable/history" />

        <TextView
            android:id="@+id/buttonHistoryText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/buttonHistoryImage"
            android:text="@string/History"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonSettings"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHistory">

        <ImageView
            android:id="@+id/buttonSettingsImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/SettingsImage"
            android:src="@drawable/settings" />

        <TextView
            android:id="@+id/buttonSettingsText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/buttonSettingsImage"
            android:text="@string/Settings"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>