<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".StartBallBounceTest">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:text="@string/ChooseBall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/buttonFootball1"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/buttonFootball1Image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/FootballImage"
            android:src="@drawable/football" />

        <TextView
            android:id="@+id/buttonFootball1TopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonFootball1Image"
            android:layout_toEndOf="@+id/buttonFootball1Image"
            android:text="@string/Football1TopText"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buttonFootball1BottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonFootball1Image"
            android:layout_toEndOf="@+id/buttonFootball1Image"
            android:text="@string/Football1BottomText"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonFootball2"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFootball1">

        <ImageView
            android:id="@+id/buttonFootball2Image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/FootballImage"
            android:src="@drawable/football" />

        <TextView
            android:id="@+id/buttonFootball2TopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonFootball2Image"
            android:layout_toEndOf="@+id/buttonFootball2Image"
            android:text="@string/Football2TopText"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buttonFootball2BottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonFootball2Image"
            android:layout_toEndOf="@+id/buttonFootball2Image"
            android:text="@string/Football2BottomText"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonFootball3"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFootball2">

        <ImageView
            android:id="@+id/buttonFootball3Image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/football"
            android:contentDescription="@string/FootballImage" />

        <TextView
            android:id="@+id/buttonFootball3TopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonFootball3Image"
            android:layout_toEndOf="@+id/buttonFootball3Image"
            android:text="@string/Football3TopText"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buttonFootball3BottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonFootball3Image"
            android:layout_toEndOf="@+id/buttonFootball3Image"
            android:text="@string/Football3BottomText"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonFootball4"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFootball3">

        <ImageView
            android:id="@+id/buttonFootball4Image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/football"
            android:contentDescription="@string/FootballImage" />

        <TextView
            android:id="@+id/buttonFootball4TopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/buttonFootball4Image"
            android:layout_toEndOf="@+id/buttonFootball4Image"
            android:text="@string/Football3TopText"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buttonFootball4BottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonFootball4Image"
            android:layout_toEndOf="@+id/buttonFootball4Image"
            android:text="@string/Football4BottomText"
            android:textAllCaps="false"
            android:textSize="15sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>